# is-spinnaker-gateway

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
etc/conf/: camera_0.json  options.json
etc/docker/: Dockerfile  Dockerfile.dev
etc/examples/: get_config.py
etc/k8s/: deployments.yaml
etc/manifests/: configmaps.yaml  deployments.yaml
etc/manifests/0/: configmap.yaml  deployment.yaml
etc/manifests/1/: configmap.yaml  deployment.yaml
etc/manifests/2/: configmap.yaml  deployment.yaml
etc/manifests/3/: configmap.yaml  deployment.yaml
examples/: get_config.py  set_config.py  view_opencv.py
is_spinnaker_gateway/: exceptions.py  gateway.py  logger.py  service.py
is_spinnaker_gateway/conf/: options.proto  options_pb2.py  options_pb2.pyi
is_spinnaker_gateway/driver/: base.py
is_spinnaker_gateway/driver/interface/: __init__.py  camera.py
is_spinnaker_gateway/driver/spinnaker/: __init__.py  camera.py  nodes.py  spinnaker.py  utils.py
tests/: test_version.py
