[tool.poetry]
name = "is-spinnaker-gateway"
version = "0.1.1"
description = ""
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
readme = "README.md"
packages = [{include = "is_spinnaker_gateway"}]

[tool.poetry.dependencies]
python = "^3.8"
is-msgs = "1.1.10"
is-wire = "1.2.0"
vine = "1.3.0"
numpy = "1.22.4"
opencv-contrib-python = "4.7.0.68"
pyturbojpeg = {git = "https://github.com/lilohuang/PyTurboJPEG.git"}
opencensus-ext-zipkin = "0.2.1"
python-dateutil = "2.8.0"
spinnaker-python = {path = "./etc/spinnaker/spinnaker_python-3.0.0.118-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
is-spinnaker-gateway = 'is_spinnaker_gateway.service:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

